tdf#91575 - CRASH: when "My Macros & Dialogs Standard" window close

Change-Id: Iad4f67e78a0aa4c67f0c450e17278f873944aa23
(cherry picked from commit dbca69b975ea8b25c040f12441d70f90cf0e9ab4)